contact list updated! some page modification done.

--- a/resources/bootfix.css
+++ b/resources/bootfix.css
@@ -3,3 +3,4 @@
 .btn-sm.btn-round{border-radius:20px; padding:.375rem 1.00rem;}
 .btn-lg.btn-round{border-radius:25px; padding:.375rem 1.25rem;}
 .img-circle{border-radius:50%;}
+.modal-title{font-size:1em!important;}
