--- a/resources/style.css
+++ b/resources/style.css
@@ -1,10 +1,16 @@
 body
 {
 	font-size:1.15em;
+	font-family: 'Ubuntu', sans-serif;
 }
 
-#my-thumb{width:128px;}
-.font-consolas{font-family:'consolas';}
+#my-thumb{
+	width:164px;    
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+}
+.font-consolas{font-family:'Consolas', sans-serif !important;}
+.font-ubuntu{font-family:'Ubuntu', sans-serif !important;}
 .nav_fix{height:62px;}
 
 section{padding:50px 0px;}
