--- a/resources/plugins/init.css
+++ b/resources/plugins/init.css
@@ -1,6 +1,10 @@
 /*
- * Plugin initializer CSS
+ * Script   : init.css (Plugin initializer)
+ * Project  : Aminul Islam's Personal Portfolio
+ * URL      : https://an-amin.github.io
+ * Author   : Aminul Islam
  */
+ 
 
 /*swiper*/
 .swiper-container {
