--- a/resources/style.css
+++ b/resources/style.css
@@ -1,36 +1,9 @@
 /*
-
-
-        .-------.
-      .'         `.
-    .'             `.
-    |.-. .-. .-. .-.|
-    |`-.  |  | | |-'|
-    |`-'  '  `-' '  |
-    '               '
-     `.           .'.''.  .''.
-       `._______.'   __   __
-           | | .----/  \ /  \---.
-           | | |   |    |    |  |____
-           | | |   |`--''`--'| /  |  \_
-         ,----.|   \  O | O  _ |  |  | \
-         | ---'|    '._/ \_.| `|  |  | |
-         \.---'|            |  | `- ,| |
-          `---'|            | :        |
-           | | |            |  '._.--  ;
-           | | |    .      .:      `  /
-           '-' |     '....'  `.______/
-               |                |
-               |                |
-               `----------------'
-                   ||      ||fsr
-                   ||      ||
-            _.---'' '-, ,-' ''---._
-           /      __..' '..__      \
-           '---''`           `''---'
-
-
-*/
+ * Script   : style.css (default stylesheet)
+ * Project  : Aminul Islam's Personal Portfolio
+ * URL      : https://an-amin.github.io
+ * Author   : Aminul Islam
+ */
 
 body
 {
